Fix layout overflow

--- a/src/components/App/MainPanel/ContentPanel/ContentItem/ContentItem.css
+++ b/src/components/App/MainPanel/ContentPanel/ContentItem/ContentItem.css
@@ -19,7 +19,7 @@
     background-position: center;
     background-repeat: no-repeat;
     height: var(--content-item-icon-size);
-    width: var(--content-item-icon-size);
+    min-width: var(--content-item-icon-size);
 }
 
 .content-item-property-name {
