--- a/src/components/App/MainPanel/ContentPanel/ContentPanel.css
+++ b/src/components/App/MainPanel/ContentPanel/ContentPanel.css
@@ -1,4 +1,5 @@
 .content-panel-container {
+    overflow-x: hidden;
     width: 100%;
 }
 
