--- a/src/components/App/MainPanel/OperationBar/OperationBar.css
+++ b/src/components/App/MainPanel/OperationBar/OperationBar.css
@@ -1,6 +1,7 @@
 .operation-bar-container {
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
     width: 100%;
 }
 
